# gabbee

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
share/ibus/component/: gabbee.xml
src/gabbee/: __init__.py  app_paths.py  audio.py  config.py  controller.py  ibus_client.py  ibus_component.py  ibus_engine.py  install.py  main_bar.py  main_engine.py  models.py  output.py  text_processor.py
src/gabbee/stt/: __init__.py  base.py  elevenlabs.py  mock.py  whisper_local.py
src/gabbee/ui/: __init__.py  bar.py  config_window.py  global_shortcuts.py  tray.py
tests/: test_config.py  test_controller.py  test_ibus_component.py  test_ibus_engine_focus.py  test_install.py  test_output.py  test_text_processor.py  test_ui_bar.py
